samples/_failures_safe/1761076313_38d754_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9460ad35.c: In function ‘main’:
./samples/SAFE/__tmp_9460ad35.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
